--- a/src/components/Bienvenida.css
+++ b/src/components/Bienvenida.css
@@ -3,7 +3,7 @@
     justify-content: flex-end;
     align-items: center;
     height: 100vh; 
-    background-image: url('/public/images/utiles.jpg'); 
+    background-image: url('/public/images/fondo.jpg'); 
     background-size: cover; /* Cover the entire container */
     background-position: center;
     position: relative; /* For the card's positioning */
